ENH: Add support for biasing detection based on composite name (Table/File) (Issue #154) + ENH: Improve ZIP detection if have data of the form 99999- (i.e. a trailing hyphen)